@@ -59,6 +59,7 @@
     <Compile Include="Memory\PhysicalPages.cs" />
     <Compile Include="Memory\PhysicalPagesMapping.cs" />
     <Compile Include="Memory\Section.cs" />
+    <Compile Include="NProcessHacker.cs" />
     <Compile Include="Objects\IoCompletionHandle.cs" />
     <Compile Include="Objects\TerminalServerHandle.cs" />
     <Compile Include="Security\IoCompletionAccess.cs" />
