@@ -25,6 +25,7 @@ using System.Collections.Generic;
 using System.Drawing;
 using Aga.Controls.Tree;
 using ProcessHacker.Common;
+using ProcessHacker.Native;
 using ProcessHacker.Native.Api;
 using ProcessHacker.Native.Objects;
 using ProcessHacker.Native.Security;
